; ModuleID = '/home/carl/AnghaBench/linux/samples/bpf/extr_ibumad_kern.c_on_ib_umad_write.c'
source_filename = "/home/carl/AnghaBench/linux/samples/bpf/extr_ibumad_kern.c_on_ib_umad_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_umad_rw_args = type { i32 }

@.str = private unnamed_addr constant [28 x i8] c"ib_umad write : class 0x%x\0A\00", align 1
@write_count = common dso_local global i32 0, align 4
@BPF_NOEXIST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @on_ib_umad_write(%struct.ib_umad_rw_args* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ib_umad_rw_args*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.ib_umad_rw_args* %0, %struct.ib_umad_rw_args** %3, align 8
  store i32 0, i32* %4, align 4
  %7 = load %struct.ib_umad_rw_args*, %struct.ib_umad_rw_args** %3, align 8
  %8 = getelementptr inbounds %struct.ib_umad_rw_args, %struct.ib_umad_rw_args* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @bpf_printk(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = call i32* @bpf_map_lookup_elem(i32* @write_count, i32* %6)
  store i32* %12, i32** %5, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %23, label %15

15:                                               ; preds = %1
  %16 = load i32, i32* @BPF_NOEXIST, align 4
  %17 = call i32 @bpf_map_update_elem(i32* @write_count, i32* %6, i32* %4, i32 %16)
  %18 = call i32* @bpf_map_lookup_elem(i32* @write_count, i32* %6)
  store i32* %18, i32** %5, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %15
  store i32 0, i32* %2, align 4
  br label %27

22:                                               ; preds = %15
  br label %23

23:                                               ; preds = %22, %1
  %24 = load i32*, i32** %5, align 8
  %25 = load i32, i32* %24, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %24, align 4
  store i32 0, i32* %2, align 4
  br label %27

27:                                               ; preds = %23, %21
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i32 @bpf_printk(i8*, i32) #1

declare dso_local i32* @bpf_map_lookup_elem(i32*, i32*) #1

declare dso_local i32 @bpf_map_update_elem(i32*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
